primera pagina terminada

--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CURRICULUM</title>
     <link rel="stylesheet" href="CSS/Style.css">
+    <script src="https://kit.fontawesome.com/ddb52d5134.js" crossorigin="anonymous"></script>
 </head>
 <body class="color">
     <div class="container">
     <header>
         <div class="container-image">
-            <img src="IMG/abstract-872.png">
+            <img src="/IMG/Joncar.PNG">
         </div>
         <div class="container-title">
             <h1>CURRICULUM VITAE DE JONATHAN</h1>
@@ -21,10 +22,10 @@
         <div class="container-rectangle">
             <div class="container-data"> <br><br><br><br><br>
                 <h2>DATOS PERSONALES</h2>
-                <ul class="data">
-                    <li><span>Nombre completo:</span> Jonathan Cardenas</li>
-                    <li><span>Fecha de nacimiento:</span> 23/03/1994</li>
-                    <li><span>Lugar de nacimiento:</span> Cali</li>
+                <ul class="data data2">
+                    <li><span><i class="fas fa-user-circle"></i> Nombre completo:</span> Jonathan Cardenas</li>
+                    <li><span><i class="fas fa-calendar-alt"></i> Fecha de nacimiento:</span> 23/03/1994</li>
+                    <li><span><i class="fas fa-map-marker-alt"></i> Lugar de nacimiento:</span> Cali</li>
                 </ul>
             </div>
             <div class="container-data"> 
@@ -44,9 +45,10 @@
         </div>
     <footer>
         <div class="container-footer container-image2">
-            <p>023-JONCAR</p> 
-            <a href="https://es-la.facebook.com/joncar"><img src="IMG/ico_instagram.png"></a>
-            <a href="http://linkedin.com/in/jonathan-cárdenas-rodríguez-74ba8431"><img src="IMG/ico_linkedin.png"></a>
+            <p></p> 
+            <a href="https://es-la.facebook.com/joncar"><i class="fab fa-facebook-square"></i></a>
+            <a href="http://linkedin.com/in/jonathan-cárdenas-rodríguez-74ba8431"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/jooncar/"><i class="fab fa-instagram-square"></i></i></a>
         </div>
     </footer>           
         </div>
